<resources>
    <string name="app_name">MedicalTech</string>
    <string name="title_activity_registro_usuario">RegistroUsuarioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tit_med">Datos de la medicacion</string>
    <string name="recordatorio1">Cada 8 horas empieza 08:00 hrs</string>
    <string name="recordatorio2">Cada 12 horas empieza 12:00 hrs</string>


    <string name="name_usu">Datos del paciente</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo:</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="conectar_dispositivo">Conectar dispositivo</string>
    <string name="_12_00_hrs">12:00 hrs.</string>
    <string name="ej_desinflamante">Ej. Desinflamante</string>
    <string name="intervalos_hrs">Intervalos (hrs.):</string>
    <string name="descripcion_del_medicamento">Descripcion del medicamento:</string>
    <string name="registrar_datos">Registrar datos</string>
    <string name="dosis_de_la_medicamento">Dosis de la medicamento:</string>
    <string name="ej_metformina">Ej. Metformina</string>
    <string name="ej_16_comprimidos">Ej. 16 comprimidos</string>
    <string name="nombre_del_medicamento">Nombre del medicamento:</string>
    <string name="medicamento">Medicamento:</string>
    <string name="configurar_medicacion">CONFIGURAR MEDICACION</string>
    <string name="dosis">Dosis:</string>

</resources>