<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListadoMedicamentosActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDosis"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_500"
        android:focusedMonthDateColor="@color/purple_500" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="135dp"
        android:text="Datos de la medicacion"
        android:textColor="@color/purple_500" />

    <TextView
        android:id="@+id/textViewDosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMedicamento"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="312dp"
        android:text="@string/dosis" />

    <TextView
        android:id="@+id/textViewMedicamento"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="146dp"
        android:text="@string/medicamento" />

    <Button
        android:id="@+id/buttonConfigurarMed"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="75dp"
        android:text="@string/configurar_medicacion"
        android:textColor="@color/teal_200" />

</RelativeLayout>