<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroMedicamentosActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="128dp"
        android:text="@string/tit_med"
        android:textColor="#F44336"
        tools:text="@string/tit_med" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="19dp"
        android:layout_marginTop="49dp"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:hint="Ej. Metformina"
        android:inputType="textPersonName"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:text="Dosis de la medicamento:"
        android:textColor="#F44336" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPersonName3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/textView3"
        android:ems="10"
        android:hint="Ej. 16 comprimidos"
        android:inputType="textPersonName"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="51dp"
        android:text="Recordatorio:"
        android:textColor="@color/purple_500" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="219dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        android:text="@string/recordatorio1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="33dp"
        android:text="@string/recordatorio2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPersonName4"
        android:layout_marginStart="68dp"
        android:layout_marginTop="80dp"
        android:layout_toEndOf="@+id/textView7" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_marginStart="70dp"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="38dp"
        android:text="Calendario:"
        android:textColor="@color/purple_700" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="57dp"
        android:text="Nombre del medicamento:"
        android:textColor="#F44336" />

    <RadioGroup
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="221dp">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diario" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cada dos dias" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="53dp"
        android:text="Registrar datos" />

</RelativeLayout>